log_output/ex3.2/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  namespace: log-output-namespace
spec:
  selector:
    matchLabels:
      app: log-output
  replicas: 1
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output-container
        image: santlemp/log_output:2.6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deployment
  namespace: log-output-namespace
spec:
  selector:
    matchLabels:
      app: ping-pong
  replicas: 1
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong-container
        image: santlemp/ping_pong:3.2
