log_output/ex3.2/manifests/statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: log-output-namespace
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
      namespace: log-output-namespace
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: log-output-pvc
      containers:
        - name: postgres-container
          image: postgres:14
          ports:
            - name: pg
              containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data 
              subPath: postgres
