log_output/ex3.2/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
  namespace: log-output-namespace
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
  namespace: log-output-namespace
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 80
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: log-output-namespace
  labels:
    app: postgres-svc
spec:
  ports:
  - port: 5432
    name: pg
  clusterIP: None
  selector:
    app: postgres
